// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render Disabled input 1`] = `
<div>
  <div
    class="input  "
  >
    <input
      class="input__field undefined"
      disabled=""
      type="input"
      value="Initial value"
    />
  </div>
</div>
`;

exports[`Input should render Input with icon 1`] = `
<div>
  <div
    class="input input--with-icon "
  >
    <div
      class="icon icon--angle   "
    />
    <input
      class="input__field undefined"
      type="input"
      value="Value"
    />
  </div>
</div>
`;

exports[`Input should render Input with initial value 1`] = `
<div>
  <div
    class="input  "
  >
    <input
      class="input__field undefined"
      type="input"
      value="Initial value"
    />
  </div>
</div>
`;

exports[`Input should render Input with placeholder 1`] = `
<div>
  <div
    class="input  "
  >
    <input
      class="input__field undefined"
      placeholder="Placeholder"
      type="input"
    />
  </div>
</div>
`;
